Bug 545255 - [12] AIOOBE in org.eclipse.jdt.internal.compiler.codegen.CodeStream.lookupswitch
Change-Id: Ifb57257dfb0656b13c4354819282556f6996129a